EIP1-11113: add ems api tests back to project; upgrade sqs messaging api calls to springCloudAwsVersion 3.2.1